--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -30,15 +30,11 @@ jobs:
       - name: NPM Install
         if: github.ref == 'refs/heads/main'
         run: |
-          cd ./website
-          pwd
           npm install
 
       - name: NPM Build
         if: github.ref == 'refs/heads/main'
         run: |
-          cd ./website
-          pwd
           npm run build
 
       - name: Set S3 
@@ -52,7 +48,7 @@ jobs:
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
-          SOURCE_DIR: 'website/build/techdocs'
+          SOURCE_DIR: 'build'
 
       - name: Invalidate Cloudfront
         uses: chetan/invalidate-cloudfront-action@master
