--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "build:api": "./jsdoc/build_api_md.sh"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.3.1",
-    "@docusaurus/preset-classic": "^2.3.1",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "mermaid": "^10.0.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-github-btn": "^1.4.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.3.1",
