fix: footer link hover effect is too low contrast
Signed-off-by: anablaz <ab2043@student.uni-lj.si>

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.1",
+    "@types/node": "^20.11.24",
     "jsdoc-to-markdown": "^8.0.0"
   },
   "browserslist": {
