--- a/package.json
+++ b/package.json
@@ -12,23 +12,27 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "build:api": "./jsdoc/build_api_md.sh"
+    "build:api": "./jsdoc/build_api_md.sh",
+    "lint:deps": "syncpack lint",
+    "lint:deps:fix": "syncpack fix",
+    "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --allowed-hosts npm --validate-https",
+    "preinstall": "npm run lint:lockfile && npm run lint:deps"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "mermaid": "^10.0.2",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-github-btn": "^1.4.0"
+    "@docusaurus/core": "2.4.1",
+    "@docusaurus/preset-classic": "2.4.1",
+    "@mdx-js/react": "1.6.22",
+    "clsx": "1.2.1",
+    "mermaid": "10.0.2",
+    "prism-react-renderer": "1.3.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-github-btn": "1.4.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.1",
-    "@types/node": "^20.11.24",
-    "jsdoc-to-markdown": "^8.0.0"
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "@types/node": "20.11.24",
+    "jsdoc-to-markdown": "8.0.0"
   },
   "browserslist": {
     "production": [
