--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preinstall": "npm run lint:lockfile && npm run lint:deps"
   },
   "dependencies": {
+    "@accordproject/concerto-cto": "3.0.0",
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "1.6.22",
@@ -27,7 +28,8 @@
     "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-github-btn": "1.4.0"
+    "react-github-btn": "1.4.0",
+    "regenerator-runtime": "0.14.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
